------------------
Pylint's ChangeLog
------------------



What's New in Pylint 2.12.0?
============================
Release date: TBA

..
  Put new features here and also in 'doc/whatsnew/2.12.rst'

* Add an optional extension ``consider-using-any-or-all`` : Emitted when a ``for`` loop only
  produces a boolean and could be replaced by ``any`` or ``all`` using a generator. Also suggests
  a suitable any or all statement.

  Closes #5008

* Properly identify parameters with no documentation and add new message called ``missing-any-param-doc``

  Closes #3799
* Add checkers ``overridden-final-method`` & ``subclassed-final-class``

  Closes #3197

* Added support for ``ModuleNotFoundError`` (``import-error`` and ``no-name-in-module``).
  ``ModuleNotFoundError`` inherits from ``ImportError`` and was added in Python ``3.6``

* ``undefined-variable`` now correctly flags variables which only receive a type annotations
  and never get assigned a value

  Closes #5140

* ``undefined-variable`` now correctly considers the line numbering and order of classes
  used in metaclass declarations

  Closes #4031

* ``used-before-assignment`` now correctly considers references to classes as type annotation
  or default values in first-level methods

  Closes #3771

* ``undefined-variable`` and ``unused-variable`` now correctly trigger for assignment expressions
  in functions defaults

  Fixes part of #3688

* ``undefined-variable`` now correctly triggers for assignment expressions in if ... else statements
  This includes a basic form of control flow inference for if ... else statements using
  constant boolean values

  Closes #3688

* Fix bug with importing namespace packages with relative imports

  Closes #2967 and #5131

* Improve and flatten ``unused-wildcard-import`` message

  Closes #3859

* In length checker, ``len-as-condition`` has been renamed as
  ``use-implicit-booleaness-not-len`` in order to be consistent with
  ``use-implicit-booleaness-not-comparison``.
